--- a/Selenium/package.json
+++ b/Selenium/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index.js",
+    "test": "./node_modules/.bin/cucumber-js test/features --require ./utils --require ./steps --world-parameters {\\\"browserName\\\":\\\"chrome\\\"} --format json:test/results/chrome.json"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +24,8 @@
     "cucumber": "4.2.1",
     "selenium-webdriver": "3.6.0",
     "cucumber-html-reporter": "4.0.3"
+  },
+  "config": {
+    "port": 9294
   }
 }
